更新第三章

--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -982,7 +982,7 @@
   year    = {2017},
   address = {上海},
   lang    = {zh},
-  pinyin  = {陈雪琴},
+  pinyin  = {chenxueqin},
 }
 
 @PhdThesis{滕丽2012基于土体力学特性的盾构隧道施工风险监控系统研究,
@@ -1057,7 +1057,7 @@
   pinyin  = {yeyaodong},
 }
 
-@Article{mahdevari2012prediction,
+@Article{Mahdevari2012,
   author    = {Mahdevari, Satar and Torabi, Seyed Rahman},
   title     = {Prediction of tunnel convergence using artificial neural networks},
   journal   = {Tunnelling and Underground Space Technology},
@@ -1144,6 +1144,71 @@
   address = {上海},
   lang    = {zh},
   pinyin  = {sunjiuchun},
+}
+
+@Book{box2015time,
+  title     = {Time series analysis: forecasting and control},
+  publisher = {John Wiley \& Sons},
+  year      = {2015},
+  author    = {Box, George EP and Jenkins, Gwilym M and Reinsel, Gregory C and Ljung, Greta M},
+}
+
+@Article{noble2011eviews,
+  author  = {Noble, Nicholas R},
+  title   = {EViews User’s Guide},
+  journal = {Quantitative Micro Software, Irvine CA},
+  year    = {2011},
+}
+
+@Book{cryer2011时间序列分析及应用,
+  title     = {时间序列分析及应用: R 语言},
+  publisher = {机械工业出版社},
+  year      = {2011},
+  author    = {潘红宇},
+  lang      = {zh},
+  pinyin    = {panhongyu},
+}
+
+@Book{hamilton1994time,
+  title     = {Time series analysis},
+  publisher = {Princeton university press Princeton},
+  year      = {1994},
+  author    = {Hamilton, James Douglas},
+  volume    = {2},
+}
+
+@Article{dickey1979distribution,
+  author    = {Dickey, David A and Fuller, Wayne A},
+  title     = {Distribution of the estimators for autoregressive time series with a unit root},
+  journal   = {Journal of the American statistical association},
+  year      = {1979},
+  volume    = {74},
+  number    = {366a},
+  pages     = {427--431},
+  publisher = {Taylor \& Francis},
+}
+
+@InCollection{akaike2011akaike,
+  author    = {Akaike, Hirotugu},
+  title     = {Akaike’s information criterion},
+  booktitle = {International encyclopedia of statistical science},
+  publisher = {Springer},
+  year      = {2011},
+  pages     = {25--25},
+}
+
+@Article{schwarz1978estimating,
+  author    = {Schwarz, Gideon and others},
+  title     = {Estimating the dimension of a model},
+  journal   = {The annals of statistics},
+  year      = {1978},
+  volume    = {6},
+  number    = {2},
+  pages     = {461--464},
+  publisher = {Institute of Mathematical Statistics},
+}
+
+@Book{,
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
